--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Portfolio Johan Zuluaga Catro | FullStack Developer">
-	<main>
-		<h1>Hola Johan</h1>
-	</main>
+	<h1>Hola Johan</h1>
+	<img  class="w-44 h-44" src="/src/assets/images/logo.png" alt="logo">
 </Layout>
 
 
