--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,20 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/logocode.png" />
+		<link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<header>
+			<nav>
+				<a href="/">Home</a>
+				<a href="/about">What do I do?</a>
+			</nav>
+		</header>
+		<main>
+			<slot />
+		</main>
 	</body>
 </html>
 <style is:global>
